<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Default strings -->
    <string name="actions_settings">Settings</string>
    <string name="followers_text">Followers:</string>
    <string name="interests_text">Interests:</string>
    <string name="recent_events_text">Recent Events:</string>

    <!-- Title Text Strings -->
    <string name="app_name">AGORA</string>
    <string name="register_screen_title_text">Register</string>
    <string name="login_screen_title_text">Login</string>
    <string name="profile_settings_title_text">Profile Settings</string>
    <string name="messages_title_text">Messages</string>
    <string name="conversation_title_text">Conversation</string>
    <string name="post_idea_title_text">Post Idea</string>
    <string name="find_fragment_title_text">What are you looking for?</string>
    <string name="search_people_fragment_title_text">Search for People</string>
    <string name="search_ideas_fragment_title_text">Search for Ideas</string>

    <!-- Button Text Strings -->
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="preview_button_text">Preview</string>
    <string name="complete_button_text">Complete</string>
    <string name="post_button_text">Post</string>
    <string name="find_button_text">Find</string>
    <string name="messages_button_text">Messages</string>
    <string name="settings_button_text">Settings</string>
    <string name="update_settings_button_text">Update</string>
    <string name="send_button_text">Send</string>
    <string name="find_people_button_text">People</string>
    <string name="find_ideas_button_text">Ideas</string>
    <string name="follow_button_text">Follow</string>
    <string name="ideas_button_text">Ideas</string>
    <string name="profile_send_message_button_text">Message</string>
    <string name="search_button_text">Search</string>

    <!-- Button Description Strings -->
    <string name="user_avatar_image_description">Profile Image</string>
    <string name="other_user_avatar_image_description">Visit Profile</string>

    <!-- Image Description Strings -->
    <string name="other_profile_avatar_image_description">Avatar Image</string>

    <!-- Input Field Strings -->
    <string name="user_name_input_text">User name:</string>
    <string name="password_input_text">Password:</string>
    <string name="confirm_password_input_text">Again:</string>
    <string name="email_input_text">E-mail:</string>
    <string name="identifier_input_text">E-mail or Username:</string>
    <string name="country_input_text">Country:</string>
    <string name="city_input_text">City:</string>
    <string name="message_recipient_text">To:</string>
    <string name="write_idea">Write your idea:</string>
    <string name="choose_categories">Choose categories:</string>
    <string name="title_activity_conversation">ConversationActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_find">FindActivity</string>
    <string name="title_activity_found">FoundActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_messages_fragment">MessagesFragment</string>
    <string name="title_activity_other_profile">OtherProfileActivity</string>
    <string name="title_activity_post_idea">PostIdeaActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_profile_settings">ProfileSettingsActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_register_fragment">RegisterFragment</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search_ideas">SearchIdeasActivity</string>

</resources>
