<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="se.liu.ida.josfa969.tddd80.fragments.LoginFragment">

    <TextView
        android:text="@string/login_screen_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/title_text_size"/>

    <!-- Password input field -->
    <TextView
        android:id="@+id/login_screen_align_basis"
        android:text="@string/password_input_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="@dimen/input_text_size"/>

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="@dimen/input_field_width"
        android:layout_height="@dimen/input_field_height"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_screen_align_basis"
        android:inputType="textPassword" />

    <!-- E-mail input field -->
    <EditText
        android:id="@+id/login_email_input"
        android:layout_width="@dimen/input_field_width"
        android:layout_height="@dimen/input_field_height"
        android:layout_marginBottom="@dimen/input_field_margin"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/login_screen_align_basis"
        android:inputType="textEmailAddress" />

    <TextView
        android:text="@string/email_input_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/login_email_input"
        android:textSize="@dimen/input_text_size"/>

    <Button
        android:text="@string/login_button_text"
        android:layout_width="@dimen/login_button_width"
        android:layout_height="@dimen/login_button_height"
        android:layout_marginTop="@dimen/input_field_margin"
        android:layout_below="@id/login_password_input"
        android:layout_centerHorizontal="true"/>
    
</RelativeLayout>