<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="se.liu.ida.josfa969.tddd80.fragments.FindFragment">

    <TextView
        android:text="@string/find_fragment_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_title_text_size"
        android:layout_centerHorizontal="true"/>
    
    <Space
        android:id="@+id/find_fragment_middle_space"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_internal_margin"
        android:layout_centerVertical="true"/>
    
    <Button
        android:id="@+id/find_people_button"
        android:text="@string/find_people_button_text"
        android:layout_width="@dimen/large_button_width"
        android:layout_height="@dimen/large_button_height"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/find_fragment_middle_space"/>
    
    <Button
        android:id="@+id/find_ideas_button"
        android:text="@string/find_ideas_button_text"
        android:layout_width="@dimen/large_button_width"
        android:layout_height="@dimen/large_button_height"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/find_fragment_middle_space"/>

</RelativeLayout>
