<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="se.liu.ida.josfa969.tddd80.fragments.RegisterFragment">

    <TextView
        android:id="@+id/register_title"
        android:text="@string/register_screen_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/large_title_text_size"/>


    <!-- User name input field -->
    <TextView
        android:id="@+id/user_name_input_text"
        android:text="@string/user_name_input_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_internal_margin"
        android:layout_below="@id/register_title"
        android:textSize="@dimen/input_text_size"/>

    <EditText
        android:id="@+id/user_name_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_internal_margin"
        android:layout_toRightOf="@id/user_name_input_text"
        android:layout_alignBottom="@id/user_name_input_text"
        android:inputType="text" />


    <!-- Alignment Space -->
    <Space
        android:id="@+id/register_fragment_alignment_space"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_toRightOf="@id/user_name_input_text"/>


    <!-- Password input field -->
    <TextView
        android:id="@+id/password_input_text"
        android:text="@string/password_input_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_field_margin"
        android:layout_below="@id/user_name_input_text"
        android:layout_toLeftOf="@id/register_fragment_alignment_space"
        android:textSize="@dimen/input_text_size"/>

    <EditText
        android:id="@+id/password_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_internal_margin"
        android:layout_toRightOf="@id/register_fragment_alignment_space"
        android:layout_alignBottom="@+id/password_input_text"
        android:inputType="textPassword" />


    <!-- Confirm password input field -->
    <TextView
        android:id="@+id/confirm_password_input_text"
        android:text="@string/confirm_password_input_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_field_margin"
        android:layout_below="@id/password_input_field"
        android:layout_toLeftOf="@id/register_fragment_alignment_space"
        android:textSize="@dimen/input_text_size"/>

    <EditText
        android:id="@+id/confirm_password_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_internal_margin"
        android:layout_toRightOf="@id/register_fragment_alignment_space"
        android:layout_alignBottom="@+id/confirm_password_input_text"
        android:inputType="textPassword" />


    <!-- E-mail input field -->
    <TextView
        android:id="@+id/email_input_text"
        android:text="@string/email_input_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_field_margin"
        android:layout_below="@id/confirm_password_input_text"
        android:layout_toLeftOf="@id/register_fragment_alignment_space"
        android:textSize="@dimen/input_text_size"/>

    <EditText
        android:id="@+id/email_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_internal_margin"
        android:layout_toRightOf="@id/register_fragment_alignment_space"
        android:layout_alignBottom="@+id/email_input_text"
        android:inputType="textEmailAddress" />


    <!-- Country input field -->
    <TextView
        android:id="@+id/country_input_text"
        android:text="@string/country_input_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_field_margin"
        android:layout_below="@id/email_input_text"
        android:layout_toLeftOf="@id/register_fragment_alignment_space"
        android:textSize="@dimen/input_text_size"/>

    <EditText
        android:id="@+id/country_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_internal_margin"
        android:layout_toRightOf="@id/register_fragment_alignment_space"
        android:layout_alignBottom="@+id/country_input_text"
        android:inputType="textAutoComplete" />


    <!-- City input field -->
    <TextView
        android:id="@+id/city_input_text"
        android:text="@string/city_input_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_field_margin"
        android:layout_below="@id/country_input_text"
        android:layout_toLeftOf="@id/register_fragment_alignment_space"
        android:textSize="@dimen/input_text_size"/>

    <EditText
        android:id="@+id/city_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_internal_margin"
        android:layout_toRightOf="@id/register_fragment_alignment_space"
        android:layout_alignBottom="@+id/city_input_text"
        android:inputType="textAutoComplete" />


    <!-- Completion button -->
    <Button
        android:text="@string/complete_button_text"
        android:layout_width="@dimen/large_button_width"
        android:layout_height="@dimen/large_button_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/large_internal_margin"
        android:layout_below="@id/city_input_field"
        android:onClick="onCompleteClick"/>

    <!-- Status text -->
    <TextView
        android:id="@+id/register_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/large_text_size"
        android:textColor="#E50500"/>

</RelativeLayout>
