<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="se.liu.ida.josfa969.tddd80.fragments.PostIdeaFragment">

    <TextView
        android:id="@+id/post_idea_title"
        android:text="@string/post_idea_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_title_text_size"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/write_idea"
        android:text="@string/write_idea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_internal_margin"
        android:layout_below="@id/post_idea_title"
        android:textSize="@dimen/large_text_size"/>

    <EditText
        android:id="@+id/idea_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_internal_margin"
        android:layout_below="@id/write_idea"
        android:inputType="textMultiLine"/>

    <TextView
        android:id="@+id/choose_category_text"
        android:text="@string/choose_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_internal_margin"
        android:layout_below="@id/idea_input"
        android:textSize="@dimen/large_text_size"/>

    <GridView
        android:id="@+id/category_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_internal_margin"
        android:layout_below="@id/choose_category_text"
        android:numColumns="3"/>

    <Button
        android:id="@+id/post_idea_button"
        android:text="@string/post_button_text"
        android:layout_width="@dimen/small_button_width"
        android:layout_height="@dimen/small_button_height"
        android:layout_marginTop="@dimen/small_internal_margin"
        android:layout_below="@id/category_grid"
        android:layout_centerHorizontal="true"
        android:onClick="onPostClick"/>

    <!-- Status texts -->
    <TextView
        android:id="@+id/negative_post_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/large_text_size"
        android:textColor="#E50500"/>

    <TextView
        android:id="@+id/positive_post_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/large_text_size"
        android:textColor="#60E500"/>

</RelativeLayout>
